Add squared preview window

--- a/app/src/main/res/layout/activity_squared_camera.xml
+++ b/app/src/main/res/layout/activity_squared_camera.xml
@@ -9,4 +9,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.chooblarin.squaredcamera.SquaredView
+            android:id="@+id/squared_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="#222">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="take photo"
+                android:onClick="onClickTakePhoto"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
 </RelativeLayout>
