--- a/app/src/main/res/layout/activity_squared_camera.xml
+++ b/app/src/main/res/layout/activity_squared_camera.xml
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="take photo"
-                android:onClick="onClickTakePhoto"/>
+                android:onClick="onClickTakePicture"/>
 
         </RelativeLayout>
 
