Add retake button and save button

--- a/app/src/main/res/layout/activity_squared_camera.xml
+++ b/app/src/main/res/layout/activity_squared_camera.xml
@@ -15,15 +15,17 @@
         android:orientation="vertical">
 
         <com.chooblarin.squaredcamera.SquaredView
-            android:id="@+id/squared_view"
+            android:id="@+id/squared_image_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"/>
 
         <RelativeLayout
+            android:id="@+id/control_panel"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:clickable="true"
             android:background="#222">
 
             <Button
